# gitops-bootstrap-tui

./: Cargo.toml  LICENSE  Makefile  README.md  example_config.json
src/: actions.rs  config.rs  executing.rs  explorer.rs  generate.rs  git.rs  helm.rs  home.rs  main.rs  summary.rs  ui.rs  wizard.rs
