[package]
name = "gitops-bootstrap-tui"
version = "2.0.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
strip-ansi-escapes = "0.2.1"
tempfile = "3.27.0"
tui-input = "0.15.3"

[dev-dependencies]
tempfile = "3.27.0"
